[package]
name = "tidal-wrapper"
description = "Unofficial API wrapper for TIDAL"
version = "0.1.0"
authors = ["Agustin Mediotti <agustinmediotti@gmail.com>"]
repository = "https://github.com/Agustin-Mediotti/tidal-wrapper"
keywords = ["TIDAL", "API"]
categories = ["wrapper"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"