[package]
name = "tidal-wrapper"
description = "Unofficial API wrapper for TIDAL"
version = "0.1.0"
authors = ["Agustin Mediotti <agustinmediotti@gmail.com>"]
repository = "https://github.com/Agustin-Mediotti/tidal-wrapper"
keywords = ["TIDAL", "API"]
categories = ["wrapper"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.22"
serde = {version = "1.0.215", features =["derive"]}
serde_json = "1.0.133"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.4"
oauth2 = "4.0"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
mockito = "0.27.0"
dotenv = "0.15.0"